--- a/README.org
+++ b/README.org
@@ -8,9 +8,8 @@ on a continuously updated stream of weather data.
 At this time, Pyregence displays results from these open source fire
 behavior models:
 
-1. [[https://github.com/pyregence/gridfire][GridFire]]
-2. [[https://github.com/pyregence/elmfire][ELMFIRE]]
-3. [[https://github.com/pyregence/quicfire][QuicFire]]
+1. [[https://github.com/pyregence/elmfire][ELMFIRE]]
+2. [[https://github.com/pyregence/gridfire][GridFire]]
 
 ** Installation Requirements
 
@@ -18,6 +17,21 @@ behavior models:
 - [[https://clojure.org/guides/getting_started][Clojure CLI tools]]
 - [[https://www.postgresql.org/download][Postgresql (version 12)]]
 - [[https://postgis.net/install][PostGIS (version 3)]]
+
+** Application Configuration
+
+On startup, the Pyregence application reads a file called config.edn
+in the toplevel directory of this repository, which contains various
+user-configurable system parameters. A sample file called
+config.default.edn is provided with this repository to get you
+started. To begin, simply rename (or copy) it to config.edn. Then edit
+it according to the following sections.
+
+Please note that you must replace all values surrounded with angle
+brackets (e.g., "<api-key>") with actual values for the application to
+work correctly. While most of the fields should be self-explanatory,
+the ~:wildfire-camera-api-key~ field may not be. This is simply an API
+key for the [[http://alertwildfire.org][AlertWildfire]] API.
 
 ** Postgresql Database Setup
 
@@ -115,18 +129,6 @@ C:\Program Files\PostgreSQL\X\bin
 
 Replace *X* with the PostgreSQL version installed on your computer.
 
-*** Step 3: Add Cameras Configuration
-
-1. Copy the default camera config file in the project directory:
-#+begin_src sh
-cp camera-config.default.edn camera-config.edn
-#+end_src
-
-2. Ask one of the developers for the API key to
-[[http://alertwildfire.org][AlertWildfire]] API.
-
-3. Open camera-config.edn and replace "REPLACE_ME" with the API key.
-
 ** Development Web Server
 
 *** Modifying hosts file
@@ -174,21 +176,6 @@ system performance.
 
 - [[https://certbot.eff.org/][certbot]]
 - [[https://www.openssl.org/source/][openssl]]
-
-*** Email Server
-
-To set up the email server for system emails, start by creating a file
-named `email-server.edn` in the root directory of the application. Add
-the following EDN object containing server details to the file,
-replacing the values with your own:
-
-#+begin_src clojure
-{:site-url "https://pyregence.org"
- :host     "smtp.gmail.com"
- :user     "example@gmail.com"
- :pass     "changeme"
- :ssl      true}
-#+end_src
 
 *** Enabling https
 
