--- a/README.org
+++ b/README.org
@@ -8,15 +8,15 @@ on a continuously updated stream of weather data.
 At this time, Pyregence displays results from these open-source fire
 behavior models:
 
-1. [[https://github.com/pyregence/elmfire][ELMFIRE]]
+1. [[https://github.com/lautenberger/elmfire][ELMFIRE]]
 2. [[https://github.com/pyregence/gridfire][GridFire]]
 
 ** Installation Requirements
 
 - [[https://www.oracle.com/java/technologies/downloads/#java17][Java Development Kit (version 17.0.3)]]
 - [[https://clojure.org/guides/getting_started][Clojure CLI tools]]
-- [[https://www.postgresql.org/download][Postgresql (version 12)]]
-- [[https://postgis.net/install][PostGIS (version 3)]]
+- [[https://www.postgresql.org/download][PostgreSQL (version 12)]]
+- [[https://postgis.net/][PostGIS (version 3)]]
 
 ** Application Configuration
 
@@ -32,13 +32,13 @@ brackets (e.g., "<api-key>") with actual values for the application to
 work correctly. The Mapbox ~:access-token~ field requires a
 [[https://docs.mapbox.com/help/getting-started/access-tokens/][Mapbox access token]].
 The ~:wildfire-camera-api-key~ field requires an API key for the
-[[http://alertwildfire.org][AlertWildfire]] API. You should change the
+[[https://www.alertwildfire.org/][AlertWildfire]] API. You should change the
 ~:pyr-auth-token~ field to a unique string that's at least 16 characters long.
 
-** Postgresql Database Setup
+** PostgreSQL Database Setup
 
 *PostgreSQL* needs to be installed on the machine that will be hosting
-the Pyregence website. Once the Postgresql database server is running
+the Pyregence website. Once the PostgreSQL database server is running
 on your machine, you should navigate to the top-level directory and run
 the database build command as follows:
 
@@ -57,15 +57,15 @@ dev data with ~--dev-data~. This will initialize the DB with 2 users and a
 
 *** Performance Settings
 
-If you want to improve the performance of your Postgresql server, one
+If you want to improve the performance of your PostgreSQL server, one
 way is to visit the [[https://pgtune.leopard.in.ua/][pgtune]] website
 and input your system settings. This will generate a set of configuration
 options that you can add to the ~postgresql.conf~ file in your system-specific
-Postgresql data directory.
+PostgreSQL data directory.
 
 If you would like to keep these settings separate for your own
 reference, you can add them to a file called "performance.conf" that
-you should place in your Postgresql data directory. You can then
+you should place in your PostgreSQL data directory. You can then
 import these settings into ~postgresql.conf~ by adding this line to the
 end of that file:
 
@@ -73,7 +73,7 @@ end of that file:
 include = 'performance.conf'
 #+end_example
 
-Note that the Postgresql server will need to be restarted for these
+Note that the PostgreSQL server will need to be restarted for these
 changes to take effect.
 
 ** Environment Variable Setup
@@ -222,24 +222,24 @@ for more information.
 - [[https://certbot.eff.org/][certbot]]
 - [[https://www.openssl.org/source/][openssl]]
 
-*** Enabling https
+*** Enabling HTTPS
 
 View the [[https://github.com/sig-gis/triangulum#triangulumhttps][Triangulum HTTPS]]
 page for further instructions on enabling HTTPS.
 
-*** Compiling Clojurescript to Javascript
+*** Compiling ClojureScript to JavaScript
 
-To compile the Clojurescript files under src/cljs to Javascript under
-target/public/cljs, navigate to the top-level project directory and
+To compile the ClojureScript files under src/cljs to JavaScript under
+`target/public/cljs`, navigate to the top-level project directory and
 run:
 
 #+begin_src sh
 clojure -M:compile-cljs
 #+end_src
 
-The main Javascript entry point file will be written to
-target/public/cljs/app.js. The Clojurescript compiler options are read
-from the top-level compile-prod.cljs.edn file.
+The main JavaScript entry point file will be written to
+`target/public/cljs/app.js`. The ClojureScript compiler options are read
+from the top-level `compile-prod.cljs.edn` file.
 
 *** Launching the Web Server
 
@@ -282,7 +282,7 @@ page for further instructions on enabling the app as a system service.
 *** Maintaining Daily Logs
 
 By default the server will log to standard out. If you would like to
-have the system log to ~YYYY-DD-MM.log~, use the "-o path" option to
+have the system log to ~YYYY-DD-MM.log~, use the `-o path` option to
 specify an output path. You can either specify a path relative to
 the top-level directory of this repository or an absolute path on
 your filesystem. The logger will keep the 10 most recent logs.
