--- a/README.org
+++ b/README.org
@@ -163,7 +163,7 @@ To start the Figwheel server, navigate to the top-level project
 directory and run:
 
 #+begin_src sh
-clojure -M:figwheel
+clojure -M:default-ssl-opts:figwheel
 #+end_src
 
 This will start a web server on ~http://local.pyrecast.org:8080~ (also
@@ -248,7 +248,7 @@ project directory and run:
 
 #+begin_src sh
 clojure -M:build-db functions
-clojure -M:server start -m [dev|prod] [-p 8080] [-P 8443] [-r/--repl]
+clojure -M:default-ssl-opts:server start -m [dev|prod] [-p 8080] [-P 8443] [-r/--repl]
 #+end_src
 
 The website will then be available at ~http://localhost:8080~ unless a
