--- a/README.org
+++ b/README.org
@@ -352,7 +352,7 @@ on a config.edn, java and psql. The JAR's cli actions are available through ~jav
 java -jar target/pyregence-*
 #+end_src
 
-But the current notable actions are running the server and the build-db functionality.
+The current notable actions are running the server and the build-db functionality. For more fine grained documentation please refer to https://github.com/sig-gis/triangulum
 
 ** License and Distribution
 
