--- a/README.org
+++ b/README.org
@@ -337,6 +337,23 @@ Ubuntu example:
 sudo less +G /var/log/nginx/error.log
 #+end_src
 
+*** JAR
+
+To build a JAR run:
+
+#+begin_src sh
+clj -X:build-uberjar
+#+end_src
+
+This will produce a uberJAR located at  target/pyregence-<date>-<commit>-standalone.jar which depends only
+on a config.edn, java and psql. The JAR's cli actions are available through ~java -jar~:
+
+#+begin_src sh :results raw
+java -jar target/pyregence-*
+#+end_src
+
+The current notable actions are [[https://github.com/sig-gis/triangulum?tab=readme-ov-file#triangulumserver][running the server]] and the [[https://github.com/sig-gis/triangulum?tab=readme-ov-file#triangulumbuild-db][building the database]].
+
 ** License and Distribution
 
 Copyright © 2020-2025 Spatial Informatics Group, LLC.
