--- a/README.org
+++ b/README.org
@@ -17,9 +17,9 @@ To run PyreCast locally you will need a JDK ([[https://openjdk.org/projects/jdk/
 Clojure ([[https://clojure.org/guides/install_clojure][cli-1.11.*]]), [[https://github.com/babashka/babashka#installation][babashka]],
 NPM ([[https://nodejs.org/en/download][node-22]]), and PostgresSQL ([[https://www.postgresql.org/download][13]]).
 You can install these packages globally on your system or, assuming you have
-[[https://guix.gnu.org/][guix]] installed, by running [[./pyregence-shell.sh][~pyregence-shell.sh~]]
+[[https://guix.gnu.org/][guix]] installed, by running [[./pyregence-shell.sh][pyregence-shell.sh]]
 which creates a container shell with all of the necessary packages installed into it.
-For the current package list see [[./manifest.scm][~manifest.scm~]].
+For the current package list see [[./manifest.scm][manifest.scm]].
 
 ** Application Configuration
 
