Condense description more and turn it into some ordered TODOs.

--- a/PYR1-1157.org
+++ b/PYR1-1157.org
@@ -1,6 +1,7 @@
-Show authenticated users, on the map, where the weathers stations are, by displaying weather station icons, and their when clicked, zoom to them, and show the following information, from this site (https://api.weather.gov/|https://api.weather.gov/), in the info popup:
+* Description
+Show authenticated users, on the map, where the weathers stations (WS) are, by displaying weather station icons, and their when clicked, zoom to them, and show the following WS-info, from this site (https://api.weather.gov/|https://api.weather.gov/), in the info popup:
 
-- Weather Station Name / ID
+- WS Name / ID
 - Forecast datetime
 - Latest forecast for selected value or all:
 - Air temperature (F)
@@ -10,3 +11,12 @@ Show authenticated users, on the map, where the weathers stations are, by displa
 - Wind direction
 - Gust
 - Air quality
+
+* TODOs
+
+** Get WS-info
+** Learn how camera-geo-info becomes a map.
+** Get WS-icon
+** Use WS-geo-info the same way camera-geo-info is to create a map.
+** Display WS-info when clicked.
+** Zoom to WS-icon when clicked
