--- a/PYR1-1157.org
+++ b/PYR1-1157.org
@@ -13,12 +13,11 @@ Show authenticated users, on the map, where the weathers stations (WS) are, by d
 - Air quality
 
 * TODOs
-** Get WS-info
-
-https://api.weather.gov/
-
-** Learn how camera-geo-info becomes a map.
-** Get WS-icon
-** Use WS-geo-info the same way camera-geo-info is to create a map.
-** Display WS-info when clicked.
-** Zoom to WS-icon when clicked
+** TODO Get WS-geo-info
+** TODO Get camera-geo-info
+** TODO See if WS-geo-info looks like it translated into the same format as camera-geo-info
+** TODO Gather other WS-info url calls.
+** TODO Get WS-icon
+** TODO Use WS-geo-info the same way camera-geo-info is to create a map.
+** TODO Display WS-info when clicked.
+** TODO Zoom to WS-icon when clicked
